--- a/MyFirstWebPage.html
+++ b/MyFirstWebPage.html
@@ -10,6 +10,8 @@
     <p>This is my first web page</p>
     <p>Isn't it nice?</p>
 
+    <img src="img/brain.jpg" alt="A brain">
+
     <p>Here are some things I'm going to learn about coding:</p>
     <ul>
       <li>HTML</li>
