--- a/favorite-things.html
+++ b/favorite-things.html
@@ -8,9 +8,10 @@
     <h2>These are a few of my favorite things.</h2>
     <h3>Hobbies</h3>
     <p>Here are some of my favorite hobbies!</p>
+    <a href="https://www.netflix.com/"><img src="img/netflix.png" alt="Netflix logo"></a>
     <ul>
-      <li>Chess</li>
-      <li>Basketball</li>
+      <li><a href= "https://www.chess.com/">Chess</a></li>
+      <li><img src="img/Jordan.jpg" alt= "A picture of Michael Jordan dunking a ball">Basketball</li>
       <li>Netflix</li>
     </ul>
 
@@ -20,20 +21,8 @@
     <p>Here are some of my favorite hobbies</p>
       <ul>
         <li>Video Games</li>
-        <li>Baseball</li>
+        <li><a href="http://atlanta.braves.mlb.com/index.jsp?c_id=atl">Baseball</a></li>
         <li>Netflix</li>
       </ul>
   </body>
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
