Bold and Italicized list and added links

--- a/MyFirstWebPage.html
+++ b/MyFirstWebPage.html
@@ -14,17 +14,12 @@
 
     <p>Here are some things I'm going to learn about coding:</p>
     <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Java Script</li>
-      <li>And a lot more!</li>
+      <li><strong><em>HTML</strong></em></li>
+      <li><strong><em>CSS</strong></em></li>
+      <li><strong><em>Java Script</strong></em></li>
+      <li><strong><em>And a lot more!</strong></em></li>
     </ul>
 
-    <ol>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ol>
+    <a href="favorite-things.html">Favorite Things</a>
   </body>
 </html>
