--- a/favorite-things.html
+++ b/favorite-things.html
@@ -10,7 +10,7 @@
     <p>Here are some of my favorite hobbies!</p>
     <a href="https://www.netflix.com/"><img src="img/netflix.png" alt="Netflix logo"></a>
     <ul>
-      <li><a href= "https://www.chess.com/">Chess</a></li>
+      <li><a href= "https://www.chess.com/"><em>Chess</em></a></li>
       <li><img src="img/Jordan.jpg" alt= "A picture of Michael Jordan dunking a ball">Basketball</li>
       <li>Netflix</li>
     </ul>
